👷 rewrote telenav-build.sh script  - fixed bug in HuffmanStringListCodecTest  - cleaned Up telenav-library-functions.sh