@@ -132,7 +132,6 @@
                     <argLine>
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-                        --add-opens org.apiguardian.api/org.apiguardian.api=ALL-UNNAMED
                         -Xmx2g
                     </argLine>
                 </configuration>
